Avoided inefficient Number constructor.